--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -46,13 +46,67 @@
             mat-flat-button
             href="https://www.google.com/"
             target="_blank"
-            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4">
-            <span>Choose & Celebrate</span><mat-icon class="icon">celebration</mat-icon></a>
-          
+            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4"
+          >
+            <span>Choose & Celebrate</span
+            ><mat-icon class="icon">celebration</mat-icon></a
+          >
         </div>
       </div>
     </div>
   </section>
   <!-- /main section -->
+  <section>
+    <div class="row justify-content-center text-center">
+      <div class="col-6 mt-5 pt-5">
+        <img
+          src="assets/images/gift-heart.png"
+        />
+      </div>
+    </div>
+    <div class="row  justify-content-center text-center mt-5 pt-5">
+      <div class="col-4">
+        <div class="working-section fw-bold">Here’s how it works</div>
+        <div class="mt-4 fs-16">More jiving, less shucking.</div>
+      </div>
+    </div>
+  </section>
+  <!-- /main-section -->
+   <!-- instruction-section -->
+   <section class="mt-5 pt-5">
+     <div class="row align-items-center justify-content-around text-center">
+        <div class="col-4">
+            <img src="assets/images/svg1.svg"/>
+            <h3 class="svg fw-bold">Scan the QR code</h3>
+            <p>When it’s time to swap info, have your new contact scan your QR code with their phone camera..</p>
+        </div>
+        <div class="col-4">
+            <img src="assets/images/svg2.svg"/>
+            <h3 class="svg fw-bold">Send a message</h3>
+            <p>Your QR code is linked to a custom message you’ve created. So all they have to do is hit Send..</p>
+        </div>
+        <div class="col-4">
+            <img src="assets/images/svg3.svg"/>
+            <h3 class="svg fw-bold">Scan the QR code</h3>
+            <p>At the end of the event, you can quickly scan your inbox and reply to everyone you met.</p>
+        </div>
+        <div class="col-6 text-center">
+            <a
+            mat-flat-button
+            href="https://www.google.com/"
+            target="_blank"
+            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4">
+          Let's Start
+        </a>
+         </div>
+     </div>
+   </section>
+   <!-- /instruction-section -->
+    <!-- footer section -->
+     <section>
+        <footer>
+          <div class="row"></div>
+        </footer>
+     </section>
 </section>
 <!-- /container section -->
