--- a/client/webUI/src/app/pages/home/home.component.css
+++ b/client/webUI/src/app/pages/home/home.component.css
@@ -15,3 +15,10 @@
 .icon{
     font-size: 22px;
 }
+.working-section{
+    font-size: 32px;
+}
+.svg{
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
