--- a/client/webUI/src/app/pages/home/home.component.css
+++ b/client/webUI/src/app/pages/home/home.component.css
@@ -1,5 +1,6 @@
 .logo-font {
   font-size: 2rem;
+
 }
 .heading {
   font-size: 4rem;
@@ -22,3 +23,8 @@
     font-size: 1.5rem;
     line-height: 2rem;
 }
+.logo-font2 {
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+  
