--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <section class="container">
   <!-- header section -->
   <section>
-    <header class="d-flex justify-content-around align-items-center p-3">
+    <header class="d-flex justify-content-between align-items-center py-3">
       <div class="logo-font">
         <span class="text-dark fw-bold">Spark</span>
         <span class="text-primary">Nest</span>
@@ -13,14 +13,7 @@
           href="https://www.google.com/"
           target="_blank"
           class="bg-dark py-3 shadow-sm me-2"
-          >Employee Login</a
-        >
-        <a
-          mat-flat-button
-          href="https://www.google.com/"
-          target="_blank"
-          class="px-4 py-3 bg-dark shadow-sm"
-          >Admin Login</a
+          >Login</a
         >
       </div>
     </header>
@@ -64,10 +57,13 @@
         <div>
           <img src="assets/images/gift-heart.png" />
         </div>
-        <div class="heading fw-bold">
-          <div>Choose</div>
-          <div>Click</div>
-          <div class="text-primary">Celebrate!</div>
+        <div class="pangea">
+          <div class="h4">Your Perfect Gift Awaits</div>
+          <div class="dropping-texts heading fw-bold text-primary">
+            <div>Choose</div>
+            <div>Click</div>
+            <div>Celebrate!</div>
+          </div>
         </div>
       </div>
     </div>
@@ -76,12 +72,14 @@
   <!-- instruction-section -->
   <section class="mt-5 pt-5">
     <div class="row justify-content-center text-center mt-5 pt-5">
-        <div class="col-4">
-          <div class="working-section fw-bold">Here’s how it works</div>
-          <div class="mt-4 fs-16">More jiving, less shucking.</div>
-        </div>
+      <div class="col-4">
+        <div class="working-section fw-bold">Here’s how it works</div>
+        <div class="mt-4 fs-16">More jiving, less shucking.</div>
       </div>
-    <div class="row align-items-center justify-content-around text-center mt-5 pt-5">
+    </div>
+    <div
+      class="row align-items-center justify-content-around text-center mt-5 pt-5"
+    >
       <div class="col-4">
         <img src="assets/images/svg1.svg" />
         <h3 class="svg fw-bold">Scan the QR code</h3>
@@ -106,15 +104,76 @@
           everyone you met.
         </div>
       </div>
-      <div class="col-6 text-center">
-        <a
-          mat-flat-button
-          href="https://www.google.com/"
-          target="_blank"
-          class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4"
-        >
-          Let's Start
-        </a>
+    </div>
+    <!-- image section -->
+     <div class="row justify-content-between align-items-center mt-5 pt-5">
+      <div class="col-12">
+        <div class="row justify-content-center">
+          <div class="col-3">
+            <mat-card class="example-card p-3  bg-dark" appearance="outlined">
+              
+              <img
+                mat-card-image
+                src="assets/images/login-image.jpg"
+                alt="Photo of a Shiba Inu"
+              />
+              <div class="image-card">Login into page</div>
+            </mat-card>
+          </div>
+          <div class="col-3">
+            <mat-card class="example-card p-3 bg-dark" appearance="outlined">
+               
+              <img
+                mat-card-image
+                src="assets/images/gift-selection.png"
+                class="bg-light"
+                alt="Photo of a Shiba Inu"
+              />
+              <div class="image-card">Login into page</div>
+            </mat-card>
+          </div>
+          <div class="col-3">
+            <mat-card class="example-card p-3 bg-dark" appearance="outlined">
+               
+              <img
+                mat-card-image
+                src="assets/images/gifts.png"
+                class="bg-light"
+                alt="Photo of a Shiba Inu"
+              />
+              <div class="image-card">Login into page</div>
+            </mat-card>
+          </div>
+          <div class="col-3">
+            <mat-card class="example-card p-3 bg-dark" appearance="outlined">
+             
+              <img
+                mat-card-image
+                src="assets/images/gift-announcement.png"
+                class="bg-light"
+                alt="Photo of a Shiba Inu"
+              />
+              <div class="image-card">Login into page</div>
+               
+            </mat-card>
+          </div>
+        </div>
+      </div>
+       
+     </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="text-center mt-4">
+          <a
+            mat-flat-button
+            href="https://www.google.com/"
+            target="_blank"
+            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4"
+          >
+            <span>Choose & Celebrate</span
+            ><mat-icon class="icon">celebration</mat-icon></a
+          >
+        </div>
       </div>
     </div>
   </section>
@@ -131,16 +190,14 @@
           <p>Unlock Your Gift, Embrace the Moment!</p>
         </div>
       </div>
-      <div class="d-flex justify-content-center mt-4">
-        <a mat-stroked-button href="https://www.google.com/" target="_blank" class="text-dark me-2">About</a>
-        <a mat-stroked-button href="https://www.google.com/" target="_blank"  class="text-dark  me-2">Privacy</a>
-        <a mat-stroked-button href="https://www.google.com/" target="_blank"  class="text-dark  me-2">Terms</a>
-        <a mat-stroked-button href="https://www.google.com/" target="_blank"  class="text-dark  me-2">Contact</a>
-      </div>
       <div class="d-flex justify-content-center align-items-center mt-1">
-        <div  class="d-flex justify-content-center align-items-center mt-3"><mat-icon class="icon">copyright</mat-icon>2024 All rights are reserved by SparkNest</div>
+        <div class="d-flex justify-content-center align-items-center mt-3">
+          <mat-icon class="icon">copyright</mat-icon>2024 All rights are
+          reserved by SparkNest
+        </div>
       </div>
     </footer>
   </section>
   <!-- /footer section -->
-<!-- /container section -->
+  <!-- /container section -->
+</section>
