--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -117,7 +117,7 @@
                 src="assets/images/login-image.jpg"
                 alt="Photo of a Shiba Inu"
               />
-              <div class="image-card">Login into page</div>
+              <div class="image-card">Login with Us</div>
             </mat-card>
           </div>
           <div class="col-3">
@@ -129,7 +129,7 @@
                 class="bg-light"
                 alt="Photo of a Shiba Inu"
               />
-              <div class="image-card">Login into page</div>
+              <div class="image-card">Discover your Gifts</div>
             </mat-card>
           </div>
           <div class="col-3">
@@ -141,7 +141,7 @@
                 class="bg-light"
                 alt="Photo of a Shiba Inu"
               />
-              <div class="image-card">Login into page</div>
+              <div class="image-card">Choose your Gift</div>
             </mat-card>
           </div>
           <div class="col-3">
@@ -153,7 +153,7 @@
                 class="bg-light"
                 alt="Photo of a Shiba Inu"
               />
-              <div class="image-card">Login into page</div>
+              <div class="image-card">Celebrate</div>
                
             </mat-card>
           </div>
