--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -1,26 +1,31 @@
-<!--container section -->
-<section class="container">
+<!--container-fluid section -->
+<section class="container-fluid">
   <!-- header section -->
   <section>
-    <header class="d-flex justify-content-between align-items-center py-3">
-      <div class="logo-font">
-        <span class="text-dark fw-bold">Spark</span>
-        <span class="text-primary">Nest</span>
-      </div>
-      <div>
-        <a
-          mat-flat-button
-          href="https://www.google.com/"
-          target="_blank"
-          class="bg-dark py-3 shadow-sm me-2"
-          >Login</a
-        >
+    <header class="bg-light shadow-sm">
+      <div
+        class="container d-flex justify-content-between align-items-center py-3"
+      >
+        <div class="logo-font">
+          <span class="text-dark fw-bold">Spark</span>
+          <span class="text-primary">Nest</span>
+        </div>
+        <div>
+          <a
+            mat-flat-button
+            href="https://www.google.com/"
+            target="_blank"
+            class="bg-dark py-3 shadow-sm me-2"
+            >Login</a
+          >
+        </div>
       </div>
     </header>
   </section>
   <!-- /header section  -->
-  <!-- main section -->
-  <section class="main mt-5 pt-5">
+
+  <!-- banner section -->
+  <section class="container main mt-5">
     <div class="row justify-content-center">
       <div class="col-6">
         <div class="heading fw-bold text-center">
@@ -39,7 +44,7 @@
             mat-flat-button
             href="https://www.google.com/"
             target="_blank"
-            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4"
+            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-2"
           >
             <span>Choose & Celebrate</span
             ><mat-icon class="icon">celebration</mat-icon></a
@@ -48,8 +53,9 @@
       </div>
     </div>
   </section>
-  <!-- /main section -->
-  <section>
+  <!-- /banner section -->
+  <!-- gift-image-sction -->
+  <section class="container">
     <div class="row justify-content-center text-center">
       <div
         class="col-12 mt-5 pt-5 d-flex justify-content-center align-items-center"
@@ -68,9 +74,9 @@
       </div>
     </div>
   </section>
-  <!-- /main-section -->
+  <!-- /gift-image-section -->
   <!-- instruction-section -->
-  <section class="mt-5 pt-5">
+  <section class="container mt-5 pt-5">
     <div class="row justify-content-center text-center mt-5 pt-5">
       <div class="col-4">
         <div class="working-section fw-bold">Here’s how it works</div>
@@ -105,13 +111,11 @@
         </div>
       </div>
     </div>
-    <!-- image section -->
-     <div class="row justify-content-between align-items-center mt-5 pt-5">
+    <div class="row justify-content-between align-items-center mt-5 pt-5">
       <div class="col-12">
         <div class="row justify-content-center">
           <div class="col-3">
-            <mat-card class="example-card p-3  bg-dark" appearance="outlined">
-              
+            <mat-card class="example-card p-3 bg-dark" appearance="outlined">
               <img
                 mat-card-image
                 src="assets/images/login-image.jpg"
@@ -122,7 +126,6 @@
           </div>
           <div class="col-3">
             <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-               
               <img
                 mat-card-image
                 src="assets/images/gift-selection.png"
@@ -134,7 +137,6 @@
           </div>
           <div class="col-3">
             <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-               
               <img
                 mat-card-image
                 src="assets/images/gifts.png"
@@ -146,7 +148,6 @@
           </div>
           <div class="col-3">
             <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-             
               <img
                 mat-card-image
                 src="assets/images/gift-announcement.png"
@@ -154,13 +155,11 @@
                 alt="Photo of a Shiba Inu"
               />
               <div class="image-card">Celebrate</div>
-               
             </mat-card>
           </div>
         </div>
       </div>
-       
-     </div>
+    </div>
     <div class="row">
       <div class="col-12">
         <div class="text-center mt-4">
@@ -179,7 +178,7 @@
   </section>
   <!-- /instruction-section -->
   <!-- footer section -->
-  <section class="mt-5 pt-5 mb-5 pb-5">
+  <section class="container mt-5 pt-5 mb-5 pb-5">
     <footer>
       <div class="row justify-content-center text-center">
         <div class="col-4">
@@ -201,3 +200,4 @@
   <!-- /footer section -->
   <!-- /container section -->
 </section>
+<!--/container-fluid section -->
