header page done

--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -1,24 +1,15 @@
-<!--container-fluid section -->
-<section class="container-fluid">
+<!--landing page -->
+<section class="container-fluid p-0">
   <!-- header section -->
-  <section>
-    <header class="bg-light shadow-sm">
-      <div
-        class="container d-flex justify-content-between align-items-center py-3"
-      >
-        <div class="logo-font">
-          <span class="text-dark fw-bold">Spark</span>
-          <span class="text-primary">Nest</span>
-        </div>
-        <div>
-          <a
-            mat-flat-button
-            href="https://www.google.com/"
-            target="_blank"
-            class="bg-dark py-3 shadow-sm me-2"
-            >Login</a
-          >
-        </div>
+  <section class="bg-light shadow-sm">
+    <header class="container d-flex justify-content-between align-items-center py-3">
+      <div class="logo-font">
+        <span class="text-dark fw-bold">Spark</span>
+        <span class="text-primary">Nest</span>
+      </div>
+      <div>
+        <a mat-flat-button href="https://www.google.com/" target="_blank" class="bg-dark py-3 shadow-sm"><mat-icon
+            class="icon">celebration</mat-icon> <span>Join the Celebration</span></a>
       </div>
     </header>
   </section>
@@ -40,15 +31,9 @@
           Choose, click, and celebrate with ease!
         </div>
         <div class="text-center mt-4">
-          <a
-            mat-flat-button
-            href="https://www.google.com/"
-            target="_blank"
-            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-2"
-          >
-            <span>Choose & Celebrate</span
-            ><mat-icon class="icon">celebration</mat-icon></a
-          >
+          <a mat-flat-button href="https://www.google.com/" target="_blank"
+            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-2">
+            <span>Choose & Celebrate</span><mat-icon class="icon">celebration</mat-icon></a>
         </div>
       </div>
     </div>
@@ -57,9 +42,7 @@
   <!-- gift-image-sction -->
   <section class="container">
     <div class="row justify-content-center text-center">
-      <div
-        class="col-12 mt-5 pt-5 d-flex justify-content-center align-items-center"
-      >
+      <div class="col-12 mt-5 pt-5 d-flex justify-content-center align-items-center">
         <div>
           <img src="assets/images/gift-heart.png" />
         </div>
@@ -83,9 +66,7 @@
         <div class="mt-4 fs-16">More jiving, less shucking.</div>
       </div>
     </div>
-    <div
-      class="row align-items-center justify-content-around text-center mt-5 pt-5"
-    >
+    <div class="row align-items-center justify-content-around text-center mt-5 pt-5">
       <div class="col-4">
         <img src="assets/images/svg1.svg" />
         <h3 class="svg fw-bold">Scan the QR code</h3>
@@ -116,44 +97,26 @@
         <div class="row justify-content-center">
           <div class="col-3">
             <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-              <img
-                mat-card-image
-                src="assets/images/login-image.jpg"
-                alt="Photo of a Shiba Inu"
-              />
+              <img mat-card-image src="assets/images/login-image.jpg" alt="Photo of a Shiba Inu" />
               <div class="image-card">Login with Us</div>
             </mat-card>
           </div>
           <div class="col-3">
             <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-              <img
-                mat-card-image
-                src="assets/images/gift-selection.png"
-                class="bg-light"
-                alt="Photo of a Shiba Inu"
-              />
+              <img mat-card-image src="assets/images/gift-selection.png" class="bg-light" alt="Photo of a Shiba Inu" />
               <div class="image-card">Discover your Gifts</div>
             </mat-card>
           </div>
           <div class="col-3">
             <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-              <img
-                mat-card-image
-                src="assets/images/gifts.png"
-                class="bg-light"
-                alt="Photo of a Shiba Inu"
-              />
+              <img mat-card-image src="assets/images/gifts.png" class="bg-light" alt="Photo of a Shiba Inu" />
               <div class="image-card">Choose your Gift</div>
             </mat-card>
           </div>
           <div class="col-3">
             <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-              <img
-                mat-card-image
-                src="assets/images/gift-announcement.png"
-                class="bg-light"
-                alt="Photo of a Shiba Inu"
-              />
+              <img mat-card-image src="assets/images/gift-announcement.png" class="bg-light"
+                alt="Photo of a Shiba Inu" />
               <div class="image-card">Celebrate</div>
             </mat-card>
           </div>
@@ -163,15 +126,9 @@
     <div class="row">
       <div class="col-12">
         <div class="text-center mt-4">
-          <a
-            mat-flat-button
-            href="https://www.google.com/"
-            target="_blank"
-            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4"
-          >
-            <span>Choose & Celebrate</span
-            ><mat-icon class="icon">celebration</mat-icon></a
-          >
+          <a mat-flat-button href="https://www.google.com/" target="_blank"
+            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4">
+            <span>Choose & Celebrate</span><mat-icon class="icon">celebration</mat-icon></a>
         </div>
       </div>
     </div>
@@ -200,4 +157,4 @@
   <!-- /footer section -->
   <!-- /container section -->
 </section>
-<!--/container-fluid section -->
+<!--/landing page -->
