--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -16,14 +16,14 @@
   <!-- /header section  -->
 
   <!-- banner section -->
-  <section class="container main mt-5">
+  <section class="container main py-5">
     <div class="row justify-content-center">
       <div class="col-6">
-        <div class="heading fw-bold text-center">
+        <div class="banner-font fw-bold text-center">
           Unlock Your <span class="text-primary">Gift,</span> Embrace the
           <span class="text-primary">Moment!</span>
         </div>
-        <div class="text text-center mt-4">
+        <div class="text-center mt-4">
           Discover a world of rewards made just for you! Enter your unique code
           and browse a curated selection of gifts tailored to bring joy. With
           every choice, a moment of celebration awaits. Whether it’s a small
@@ -32,13 +32,14 @@
         </div>
         <div class="text-center mt-4">
           <a mat-flat-button href="https://www.google.com/" target="_blank"
-            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-2">
+            class="button px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2">
             <span>Choose & Celebrate</span><mat-icon class="icon">celebration</mat-icon></a>
         </div>
       </div>
     </div>
   </section>
   <!-- /banner section -->
+
   <!-- gift-image-sction -->
   <section class="container">
     <div class="row justify-content-center text-center">
@@ -127,7 +128,7 @@
       <div class="col-12">
         <div class="text-center mt-4">
           <a mat-flat-button href="https://www.google.com/" target="_blank"
-            class="button px-5 py-4 button-mh-56 bg-dark shadow-sm mt-4">
+            class="button px-5 py-4 button-mh-60 bg-dark shadow-sm mt-4">
             <span>Choose & Celebrate</span><mat-icon class="icon">celebration</mat-icon></a>
         </div>
       </div>
