--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -8,8 +8,8 @@
         <span class="text-primary">Nest</span>
       </div>
       <div>
-        <a mat-flat-button href="https://www.google.com/" target="_blank" class="bg-dark py-3 shadow-sm"><mat-icon
-            class="icon">celebration</mat-icon> <span>Join the Celebration</span></a>
+        <a mat-flat-button href="https://www.google.com/" target="_blank"
+          class="bg-dark py-3 shadow-sm"><mat-icon>celebration</mat-icon> <span>Join the Celebration</span></a>
       </div>
     </header>
   </section>
@@ -33,38 +33,41 @@
         <div class="text-center mt-4">
           <a mat-flat-button href="https://www.google.com/" target="_blank"
             class="button px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2">
-            <span>Choose & Celebrate</span><mat-icon class="icon">celebration</mat-icon></a>
+            <span>Unlock your Gift</span><mat-icon>celebration</mat-icon></a>
         </div>
       </div>
     </div>
   </section>
   <!-- /banner section -->
 
-  <!-- gift-image-sction -->
-  <section class="container">
-    <div class="row justify-content-center text-center">
-      <div class="col-12 mt-5 pt-5 d-flex justify-content-center align-items-center">
-        <div>
-          <img src="assets/images/gift-heart.png" />
-        </div>
-        <div class="pangea">
-          <div class="h4">Your Perfect Gift Awaits</div>
-          <div class="dropping-texts heading fw-bold text-primary">
-            <div>Choose</div>
-            <div>Click</div>
-            <div>Celebrate!</div>
+  <!-- gift-image-section -->
+  <section class="bg-light shadow-sm">
+    <div class="container py-5">
+      <div class="row">
+        <div class="col-12 d-flex justify-content-center align-items-center">
+          <div>
+            <img src="assets/images/gift-heart.png" />
+          </div>
+          <div>
+            <div>Your perfect gift awaits</div>
+            <div class="banner-font fw-bold">
+              <div>Choose</div>
+              <div>Click</div>
+              <div class="text-primary">Celebrate!</div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- /gift-image-section -->
+
   <!-- instruction-section -->
-  <section class="container mt-5 pt-5">
-    <div class="row justify-content-center text-center mt-5 pt-5">
+  <section class="container py-5">
+    <div class="row justify-content-center text-center">
       <div class="col-4">
-        <div class="working-section fw-bold">Here’s how it works</div>
-        <div class="mt-4 fs-16">More jiving, less shucking.</div>
+        <div class="h3 fw-bold mb-0">How it works</div>
+        <div class="">A simple journey to your perfect gift!</div>
       </div>
     </div>
     <div class="row align-items-center justify-content-around text-center mt-5 pt-5">
