--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -2,14 +2,21 @@
 <section class="container-fluid p-0">
   <!-- header section -->
   <section class="bg-light shadow-sm">
-    <header class="container d-flex justify-content-between align-items-center py-3">
+    <header
+      class="container d-flex justify-content-between align-items-center py-3"
+    >
       <div class="logo-font">
         <span class="text-dark fw-bold">Spark</span>
         <span class="text-primary">Nest</span>
       </div>
       <div>
-        <a mat-flat-button href="https://www.google.com/" target="_blank"
-          class="bg-dark py-3 shadow-sm"><mat-icon>celebration</mat-icon> <span>Join the Celebration</span></a>
+        <a
+          mat-flat-button
+          href="https://www.google.com/"
+          target="_blank"
+          class="bg-dark py-3 shadow-sm"
+          ><mat-icon>celebration</mat-icon> <span>Join the Celebration</span></a
+        >
       </div>
     </header>
   </section>
@@ -31,9 +38,14 @@
           Choose, click, and celebrate with ease!
         </div>
         <div class="text-center mt-4">
-          <a mat-flat-button href="https://www.google.com/" target="_blank"
-            class="button px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2">
-            <span>Unlock your Gift</span><mat-icon>celebration</mat-icon></a>
+          <a
+            mat-flat-button
+            href="https://www.google.com/"
+            target="_blank"
+            class="button px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2"
+          >
+            <span>Unlock your Gift</span><mat-icon>celebration</mat-icon></a
+          >
         </div>
       </div>
     </div>
@@ -70,7 +82,9 @@
         <div class="">A simple journey to your perfect gift!</div>
       </div>
     </div>
-    <div class="row align-items-center justify-content-around text-center mt-5 pt-5">
+    <div
+      class="row align-items-center justify-content-around text-center  pt-5"
+    >
       <div class="col-4">
         <img src="assets/images/svg1.svg" />
         <h3 class="svg fw-bold">Scan the QR code</h3>
@@ -96,64 +110,83 @@
         </div>
       </div>
     </div>
-    <div class="row justify-content-between align-items-center mt-5 pt-5">
-      <div class="col-12">
-        <div class="row justify-content-center">
-          <div class="col-3">
-            <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-              <img mat-card-image src="assets/images/login-image.jpg" alt="Photo of a Shiba Inu" />
-              <div class="image-card">Login with Us</div>
-            </mat-card>
-          </div>
-          <div class="col-3">
-            <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-              <img mat-card-image src="assets/images/gift-selection.png" class="bg-light" alt="Photo of a Shiba Inu" />
-              <div class="image-card">Discover your Gifts</div>
-            </mat-card>
-          </div>
-          <div class="col-3">
-            <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-              <img mat-card-image src="assets/images/gifts.png" class="bg-light" alt="Photo of a Shiba Inu" />
-              <div class="image-card">Choose your Gift</div>
-            </mat-card>
-          </div>
-          <div class="col-3">
-            <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-              <img mat-card-image src="assets/images/gift-announcement.png" class="bg-light"
-                alt="Photo of a Shiba Inu" />
-              <div class="image-card">Celebrate</div>
-            </mat-card>
+  </section>
+  <section class="bg-light shadow-sm">
+    <div class="container py-5">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-12">
+          <div class="row justify-content-center">
+            <div class="col-3">
+              <mat-card class="example-card p-3 bg-dark" appearance="outlined">
+                <img
+                  mat-card-image
+                  src="assets/images/login-image.jpg"
+                  alt="Photo of a Shiba Inu"
+                />
+                <div class="image-card">Login with Us</div>
+              </mat-card>
+            </div>
+            <div class="col-3">
+              <mat-card class="example-card p-3 bg-dark" appearance="outlined">
+                <img
+                  mat-card-image
+                  src="assets/images/gift-selection.png"
+                  class="bg-light"
+                  alt="Photo of a Shiba Inu"
+                />
+                <div class="image-card">Discover your Gifts</div>
+              </mat-card>
+            </div>
+            <div class="col-3">
+              <mat-card class="example-card p-3 bg-dark" appearance="outlined">
+                <img
+                  mat-card-image
+                  src="assets/images/gifts.png"
+                  class="bg-light"
+                  alt="Photo of a Shiba Inu"
+                />
+                <div class="image-card">Choose your Gift</div>
+              </mat-card>
+            </div>
+            <div class="col-3">
+              <mat-card class="example-card p-3 bg-dark" appearance="outlined">
+                <img
+                  mat-card-image
+                  src="assets/images/gift-announcement.png"
+                  class="bg-light"
+                  alt="Photo of a Shiba Inu"
+                />
+                <div class="image-card">Celebrate</div>
+              </mat-card>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="text-center mt-4">
-          <a mat-flat-button href="https://www.google.com/" target="_blank"
-            class="button px-5 py-4 button-mh-60 bg-dark shadow-sm mt-4">
-            <span>Choose & Celebrate</span><mat-icon class="icon">celebration</mat-icon></a>
+      <div class="row">
+        <div class="col-12">
+          <div class="text-center pt-5">
+            <a
+              mat-flat-button
+              href="https://www.google.com/"
+              target="_blank"
+              class="button px-5 py-4 button-mh-60 bg-dark shadow-sm"
+            >
+              <span>Choose & Celebrate</span
+              ><mat-icon class="icon">celebration</mat-icon></a
+            >
+          </div>
         </div>
       </div>
     </div>
   </section>
   <!-- /instruction-section -->
   <!-- footer section -->
-  <section class="container mt-5 pt-5 mb-5 pb-5">
-    <footer>
-      <div class="row justify-content-center text-center">
-        <div class="col-4">
-          <div class="logo-font2">
-            <span class="text-dark fw-bold">Spark</span>
-            <span class="text-primary">Nest</span>
-          </div>
-          <p>Unlock Your Gift, Embrace the Moment!</p>
-        </div>
-      </div>
-      <div class="d-flex justify-content-center align-items-center mt-1">
-        <div class="d-flex justify-content-center align-items-center mt-3">
-          <mat-icon class="icon">copyright</mat-icon>2024 All rights are
-          reserved by SparkNest
+  <section class="py-3 bg-dark shadow-sm text-white">
+    <footer class="container">
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="d-flex justify-content-center align-items-center pt-2">
+          <mat-icon class="icon">copyright</mat-icon> 2024 All rights are
+          reserved by SparkNest.
         </div>
       </div>
     </footer>
