--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -2,21 +2,15 @@
 <section class="container-fluid p-0">
   <!-- header section -->
   <section class="bg-light shadow-sm">
-    <header
-      class="container d-flex justify-content-between align-items-center py-3"
-    >
+    <header class="container d-flex justify-content-between align-items-center py-3">
       <div class="logo-font">
         <span class="text-dark fw-bold">Spark</span>
         <span class="text-primary">Nest</span>
       </div>
       <div>
-        <a
-          mat-flat-button
-          href="https://www.google.com/"
-          target="_blank"
-          class="bg-dark py-3 shadow-sm"
-          ><mat-icon>celebration</mat-icon> <span>Join the Celebration</span></a
-        >
+        <a mat-flat-button href="https://www.google.com/" target="_blank"
+          class="bg-dark py-3 shadow-sm button-mh-45"><mat-icon>celebration</mat-icon> <span>Join the
+            Celebration</span></a>
       </div>
     </header>
   </section>
@@ -38,14 +32,9 @@
           Choose, click, and celebrate with ease!
         </div>
         <div class="text-center mt-4">
-          <a
-            mat-flat-button
-            href="https://www.google.com/"
-            target="_blank"
-            class="button px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2"
-          >
-            <span>Unlock your Gift</span><mat-icon>celebration</mat-icon></a
-          >
+          <a mat-flat-button href="https://www.google.com/" target="_blank"
+            class="button px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2">
+            <span>Unlock your Gift</span><mat-icon>celebration</mat-icon></a>
         </div>
       </div>
     </div>
@@ -77,16 +66,14 @@
   <!-- instruction-section -->
   <section class="container py-5">
     <div class="row justify-content-center text-center">
-      <div class="col-4">
+      <div class="col-12">
         <div class="h3 fw-bold mb-0">How it works</div>
-        <div class="">A simple journey to your perfect gift!</div>
+        <div>A simple journey to your perfect gift!</div>
       </div>
     </div>
-    <div
-      class="row align-items-center justify-content-around text-center  pt-5"
-    >
+    <div class="row text-center pt-5">
       <div class="col-4">
-        <img src="assets/images/svg1.svg" />
+        <img src="assets/images/svg-number-one.svg" />
         <h3 class="svg fw-bold">Scan the QR code</h3>
         <div>
           When it’s time to swap info, have your new contact scan your QR code
@@ -94,7 +81,7 @@
         </div>
       </div>
       <div class="col-4">
-        <img src="assets/images/svg2.svg" />
+        <img src="assets/images/svg-number-two.svg" />
         <h3 class="svg fw-bold">Send a message</h3>
         <div>
           Your QR code is linked to a custom message you’ve created. So all they
@@ -102,7 +89,7 @@
         </div>
       </div>
       <div class="col-4">
-        <img src="assets/images/svg3.svg" />
+        <img src="assets/images/svg-number-three.svg" />
         <h3 class="svg fw-bold">Scan the QR code</h3>
         <div>
           At the end of the event, you can quickly scan your inbox and reply to
@@ -118,45 +105,30 @@
           <div class="row justify-content-center">
             <div class="col-3">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-                <img
-                  mat-card-image
-                  src="assets/images/login-image.jpg"
-                  alt="Photo of a Shiba Inu"
-                />
-                <div class="image-card">Login with Us</div>
+                <img mat-card-image src="assets/images/login-image.jpg" />
+                <div class="image-card d-flex justify-content-center"><span>Sign In</span> <mat-icon
+                    class="ms-1">celebration</mat-icon></div>
               </mat-card>
             </div>
             <div class="col-3">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-                <img
-                  mat-card-image
-                  src="assets/images/gift-selection.png"
-                  class="bg-light"
-                  alt="Photo of a Shiba Inu"
-                />
-                <div class="image-card">Discover your Gifts</div>
+                <img mat-card-image src="assets/images/gift-selection.png" class="bg-light" />
+                <div class="image-card d-flex justify-content-center"><span>Choose Gift</span> <mat-icon
+                    class="ms-1">celebration</mat-icon></div>
               </mat-card>
             </div>
             <div class="col-3">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-                <img
-                  mat-card-image
-                  src="assets/images/gifts.png"
-                  class="bg-light"
-                  alt="Photo of a Shiba Inu"
-                />
-                <div class="image-card">Choose your Gift</div>
+                <img mat-card-image src="assets/images/gifts.png" class="bg-light" />
+                <div class="image-card d-flex justify-content-center"><span>Select Gift</span> <mat-icon
+                    class="ms-1">celebration</mat-icon></div>
               </mat-card>
             </div>
             <div class="col-3">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
-                <img
-                  mat-card-image
-                  src="assets/images/gift-announcement.png"
-                  class="bg-light"
-                  alt="Photo of a Shiba Inu"
-                />
-                <div class="image-card">Celebrate</div>
+                <img mat-card-image src="assets/images/gift-announcement.png" class="bg-light" />
+                <div class="image-card d-flex justify-content-center"><span>Celebrate</span> <mat-icon
+                    class="ms-1">celebration</mat-icon></div>
               </mat-card>
             </div>
           </div>
@@ -165,15 +137,9 @@
       <div class="row">
         <div class="col-12">
           <div class="text-center pt-5">
-            <a
-              mat-flat-button
-              href="https://www.google.com/"
-              target="_blank"
-              class="button px-5 py-4 button-mh-60 bg-dark shadow-sm"
-            >
-              <span>Choose & Celebrate</span
-              ><mat-icon class="icon">celebration</mat-icon></a
-            >
+            <a mat-flat-button href="https://www.google.com/" target="_blank"
+              class="button px-5 py-4 button-mh-60 bg-dark shadow-sm">
+              <span>Start your Journey</span><mat-icon>celebration</mat-icon></a>
           </div>
         </div>
       </div>
@@ -181,13 +147,11 @@
   </section>
   <!-- /instruction-section -->
   <!-- footer section -->
-  <section class="py-3 bg-dark shadow-sm text-white">
+  <section class="py-4 bg-dark shadow-sm text-white">
     <footer class="container">
-      <div class="d-flex justify-content-center align-items-center">
-        <div class="d-flex justify-content-center align-items-center pt-2">
-          <mat-icon class="icon">copyright</mat-icon> 2024 All rights are
-          reserved by SparkNest.
-        </div>
+      <div class="d-flex justify-content-center align-items-center pt-2">
+        <mat-icon class="me-2">copyright</mat-icon> 2024 All rights are
+        reserved by SparkNest.
       </div>
     </footer>
   </section>
