--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="text-center mt-4">
           <a mat-flat-button href="https://www.google.com/" target="_blank"
-            class="button px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2">
+            class="px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2">
             <span>Unlock your Gift</span><mat-icon>celebration</mat-icon></a>
         </div>
       </div>
@@ -62,8 +62,7 @@
     </div>
   </section>
   <!-- /gift-image-section -->
-
-  <!-- instruction-section -->
+  <!-- how it works section -->
   <section class="container py-5">
     <div class="row justify-content-center text-center">
       <div class="col-12">
@@ -74,7 +73,7 @@
     <div class="row text-center pt-5">
       <div class="col-4">
         <img src="assets/images/svg-number-one.svg" />
-        <h3 class="svg fw-bold">Scan the QR code</h3>
+        <div class="h5">Scan the QR code</div>
         <div>
           When it’s time to swap info, have your new contact scan your QR code
           with their phone camera..
@@ -82,7 +81,7 @@
       </div>
       <div class="col-4">
         <img src="assets/images/svg-number-two.svg" />
-        <h3 class="svg fw-bold">Send a message</h3>
+        <div class="h5">Send a message</div>
         <div>
           Your QR code is linked to a custom message you’ve created. So all they
           have to do is hit Send..
@@ -90,7 +89,7 @@
       </div>
       <div class="col-4">
         <img src="assets/images/svg-number-three.svg" />
-        <h3 class="svg fw-bold">Scan the QR code</h3>
+        <div class="h5">Scan the QR code</div>
         <div>
           At the end of the event, you can quickly scan your inbox and reply to
           everyone you met.
@@ -106,29 +105,37 @@
             <div class="col-3">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
                 <img mat-card-image src="assets/images/login-image.jpg" />
-                <div class="image-card d-flex justify-content-center"><span>Sign In</span> <mat-icon
-                    class="ms-1">celebration</mat-icon></div>
+                <div
+                  class="bg-primary text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">
+                  <span>Login with Us</span> <mat-icon class="ms-1">celebration</mat-icon>
+                </div>
               </mat-card>
             </div>
             <div class="col-3">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
                 <img mat-card-image src="assets/images/gift-selection.png" class="bg-light" />
-                <div class="image-card d-flex justify-content-center"><span>Choose Gift</span> <mat-icon
-                    class="ms-1">celebration</mat-icon></div>
+                <div
+                  class="bg-primary text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">
+                  <span>Choose your Gift</span> <mat-icon class="ms-1">celebration</mat-icon>
+                </div>
               </mat-card>
             </div>
             <div class="col-3">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
                 <img mat-card-image src="assets/images/gifts.png" class="bg-light" />
-                <div class="image-card d-flex justify-content-center"><span>Select Gift</span> <mat-icon
-                    class="ms-1">celebration</mat-icon></div>
+                <div
+                  class="bg-primary text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">
+                  <span>Select your Gift</span> <mat-icon class="ms-1">celebration</mat-icon>
+                </div>
               </mat-card>
             </div>
             <div class="col-3">
               <mat-card class="example-card p-3 bg-dark" appearance="outlined">
                 <img mat-card-image src="assets/images/gift-announcement.png" class="bg-light" />
-                <div class="image-card d-flex justify-content-center"><span>Celebrate</span> <mat-icon
-                    class="ms-1">celebration</mat-icon></div>
+                <div
+                  class="bg-primary text-white fw-normal text-center shadow-sm py-2 d-flex justify-content-center border-radius-10">
+                  <span>Celebrate your Gift</span> <mat-icon class="ms-1">celebration</mat-icon>
+                </div>
               </mat-card>
             </div>
           </div>
@@ -138,14 +145,14 @@
         <div class="col-12">
           <div class="text-center pt-5">
             <a mat-flat-button href="https://www.google.com/" target="_blank"
-              class="button px-5 py-4 button-mh-60 bg-dark shadow-sm">
+              class="px-5 py-4 button-mh-60 bg-dark shadow-sm">
               <span>Start your Journey</span><mat-icon>celebration</mat-icon></a>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- /instruction-section -->
+  <!-- /how it works section -->
   <!-- footer section -->
   <section class="py-4 bg-dark shadow-sm text-white">
     <footer class="container">
