--- a/client/webUI/src/app/pages/home/home.component.html
+++ b/client/webUI/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
         <span class="text-primary">Nest</span>
       </div>
       <div>
-        <a mat-flat-button href="https://www.google.com/" target="_blank"
+        <a mat-flat-button [routerLink]="[ '/employee-code']"
           class="bg-dark py-3 shadow-sm button-mh-45"><mat-icon>celebration</mat-icon> <span>Join the
             Celebration</span></a>
       </div>
@@ -32,7 +32,7 @@
           Choose, click, and celebrate with ease!
         </div>
         <div class="text-center mt-4">
-          <a mat-flat-button href="https://www.google.com/" target="_blank"
+          <a mat-flat-button [routerLink]="[ '/employee-code']"
             class="px-5 py-4 button-mh-60 bg-dark shadow-sm mt-2">
             <span>Unlock your Gift</span><mat-icon>celebration</mat-icon></a>
         </div>
@@ -144,7 +144,7 @@
       <div class="row">
         <div class="col-12">
           <div class="text-center pt-5">
-            <a mat-flat-button href="https://www.google.com/" target="_blank"
+            <a mat-flat-button [routerLink]="[ '/employee-code']"
               class="px-5 py-4 button-mh-60 bg-dark shadow-sm">
               <span>Start your Journey</span><mat-icon>celebration</mat-icon></a>
           </div>
