checking error page

--- a/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
@@ -1,94 +1,7 @@
-<section class="main-section">
-    <div class="bg-gift-icon"></div>
-    <div>
-        <!-- svg -->
-        <svg class="page-not-found-svg" xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="none"
-            xmlns:v="https://vecta.io/nano">
-            <path fill="#fff" d="M0 0h200v200H0z" />
-            <path
-                d="M42.696 60.119s-8.377 3.314-9.61 11.364 17.805 31.63 17.805 31.63l58.707-31.635-18.561-32.574-48.341 21.215z"
-                fill="#c7dcf9" />
-            <g fill="#e1ecff">
-                <path
-                    d="M55.689 67.729s-6.177 6.342-8.072 13.36-2.139 19.549-1.823 24.243c9.215 8.528 45.64 1.383 45.64 1.383l35.102-41.292s-5.95-11.297-8.971-14.395-12.813-6.948-24.11-2.402c-6.631 9.41-37.765 19.103-37.765 19.103z" />
-                <path
-                    d="M52.933 71.007s13.628 4.374 28.969-1.552 18.121-22.617 18.121-22.617l-6.574 1.789L55.69 67.728l-2.757 3.28z"
-                    style="mix-blend-mode:multiply" />
-                <path
-                    d="M108.396 122.206s17.23.111 22.072 1.348 17.657 30.241 22.959 33.018 9.807-1.836 15.649-5.261 11.196-7.569 11.364-9.299-2.314-8.641-4.46-10.036-8.378-1.493-11.702.636c-4.883-13.306-11.827-32.71-18.194-35.381s-25.662-3.942-25.662-3.942l-12.026 28.917z" />
-            </g>
-            <g style="mix-blend-mode:multiply" opacity=".51">
-                <path
-                    d="M126.519 109.508s14.03 1.535 17.906 6.756 11.556 37.169 20.153 37.926c.137 10.349-17.667 14.086-17.667 14.086l-42.679-47.422 22.287-11.346z"
-                    fill="#e1ecff" />
-            </g>
-            <g fill="#e1ecff">
-                <path
-                    d="M62.117 119.59s10.595 22.222 20.205 28.284 27.02 5.571 31.822 9.54 3.787 23.039 8.587 28.09 11.554 8.146 17.866 7.577 11.364-3.598 11.428-6.439-.19-5.305-3.156-6.82-7.146-2.777-7.326-4.544-3.535-28.663-4.928-35.974-12.204-17.479-26.137-22.602c-13.195-11.049-33.461-6.315-33.461-6.315l-14.9 9.203z" />
-                <path
-                    d="M65.2 125.534s12.16.621 23.08-4.176c-2.087-11.113-8.525-14.395-8.525-14.395l-17.637 12.625 3.082 5.946z"
-                    style="mix-blend-mode:multiply" />
-                <path
-                    d="M82.008 9.484c-9.523-5.098-29.481-6.818-41.801 8.461s-6.18 31.125-1.003 38.502c5.421 7.742 24.053 19.574 43.94 8.461s21.972-43.051-1.136-55.425z" />
-            </g>
-            <path
-                d="M80.388 18.827c8.459 2.021 13.954 13.89 11.113 25.253S78.873 63.085 67.888 63.147 45.981 55.708 46.04 41.683c.059-13.478 15.979-27.242 34.348-22.856z"
-                fill="#eb7d2e" />
-            <path
-                d="M55.996 107.595c11.021-5.115 2.777-16.794 13.764-19.451 14.486 2.06 18.492 1.321 18.492 1.321s-27.712 24.34-32.256 18.13z"
-                fill="#e1ecff" style="mix-blend-mode:multiply" />
-            <path
-                d="M65.181 76.355l18.342 47.198 25.949-.618 23.737-15.026 7.072-21.466-17.171-51.517-8.336 24.118-21.592 17.172-28.001.14z"
-                fill="#eb7d2e" />
-            <path
-                d="M56.002 107.594c6.081-.493 9.178-4.452 11.021-6.209.939-.897.751-1.683.278-4.27s1.168-5.241 3.41-6.377c1.232 3.314 2.745 3.942 3.913 3.787s2.368-7.133 6.187-7.072 6.882 5.115 7.392 7.638-1.956 9.72-5.051 14.772-7.461 11.304-17.29 13.261-15.417-3.063-18.637-9.408c-1.087-2.141-1.478-5.1-1.444-8.397 0 0 2.2 2.905 10.221 2.274zm73.041-54.923s1.17 3.807.382 5.29-1.863 2.71-2.651 4.61.379 9.06 3.851 10.29 6.345-1.988 7.261-3.851.409-6.754-.948-10.164-3.911-6.441-7.895-6.175z"
-                fill="#e1ecff" />
-            <path
-                d="M133.018 5.372l.778 1.577c.047.096.116.178.202.241a.66.66 0 0 0 .291.119l1.742.246c.122.017.236.069.33.148a.66.66 0 0 1 .203.3c.038.117.042.242.012.362a.66.66 0 0 1-.18.314l-1.259 1.232a.65.65 0 0 0-.167.267c-.033.101-.041.209-.023.314l.296 1.725a.66.66 0 0 1-.954.695l-1.56-.818a.65.65 0 0 0-.611 0l-1.559.818a.66.66 0 0 1-.695-.049.66.66 0 0 1-.223-.285.65.65 0 0 1-.038-.36l.298-1.725c.018-.105.01-.213-.023-.314a.65.65 0 0 0-.167-.267l-1.259-1.232c-.088-.086-.151-.194-.181-.314s-.025-.245.013-.362a.66.66 0 0 1 .533-.448l1.742-.246a.65.65 0 0 0 .291-.119c.086-.063.155-.145.201-.241l.779-1.577a.66.66 0 0 1 .944-.271.67.67 0 0 1 .244.271zM49.672 172.256l.653 1.323c.039.081.097.15.169.202s.156.087.245.099l1.461.212c.102.015.197.058.276.124a.55.55 0 0 1 .18.554.56.56 0 0 1-.15.263l-1.057 1.03a.55.55 0 0 0-.141.227c-.027.086-.033.177-.017.266l.246 1.454a.55.55 0 0 1-.034.3c-.039.096-.104.178-.187.239a.55.55 0 0 1-.284.104.55.55 0 0 1-.297-.06l-1.306-.687c-.079-.041-.167-.063-.256-.063s-.177.022-.256.063l-1.301.683c-.091.048-.194.069-.297.062s-.202-.044-.285-.105-.148-.144-.187-.239-.05-.201-.032-.302l.246-1.454a.56.56 0 0 0-.019-.266c-.028-.086-.076-.164-.141-.227l-1.055-1.03c-.074-.072-.126-.163-.151-.263a.55.55 0 0 1 .011-.302c.032-.098.09-.185.169-.252s.174-.109.276-.124l1.459-.212a.54.54 0 0 0 .416-.301l.653-1.323c.046-.092.117-.17.205-.224a.56.56 0 0 1 .292-.082c.103 0 .204.03.291.085a.55.55 0 0 1 .203.226z"
-                fill="#eb7d2e" />
-            <g style="mix-blend-mode:soft-light" opacity=".48">
-                <path
-                    d="M73.007 32.994c6.064-1.337 10.596-4.159 10.123-6.304s-5.772-2.8-11.835-1.464-10.596 4.159-10.124 6.304 5.772 2.8 11.836 1.464z"
-                    fill="#fff" />
-            </g>
-            <path
-                d="M86.781 102.169s-6.975-6.233-8.239-6.233-4.63 4.929-3.871 6.233 4.657 5.584 8.937 6.9c1.387-2.647 3.174-6.9 3.174-6.9z"
-                fill="#e1ecff" style="mix-blend-mode:multiply" />
-            <g style="mix-blend-mode:multiply" opacity=".5">
-                <path d="M93.193 76.217l16.29 46.72 23.738-15.025-18.436-48.866-21.592 17.172z" fill="#eb7d2e" />
-            </g>
-            <path
-                d="M138.019 148.229a30.34 30.34 0 0 1-8.131 4.822c-2.762 1.064-3.696 3.242-2.861 7.239s1.304 10.228 3.029 11.869 7.658.769 10.733-3.046l-2.77-20.884zm16.038-40.749s-3.45 1.504-3.122 3.901 3.851 13.986 5.241 15.03 5.502-.808 5.502-.808c-4.223-11.965-7.621-18.123-7.621-18.123z"
-                style="mix-blend-mode:multiply" fill="#e1ecff" />
-            <g fill="#99adf9">
-                <path
-                    d="M8.506 135.212c-2.742-5.687 6.194-11.773 13.798-11.334s10.799 7.458 13.493 10.078c5.625 5.465 5.448 10.812 1.552 13.11s-25.214-4.331-28.843-11.854zM161.9 47.111c-2.217-1.942.064-11.068 5.303-13.205s11.743.2 13.133 3.861-13.89 13.32-18.436 9.343zm25.692 4.884c-1.136 1.619-1.893 6.229.505 7.049s4.211-3.923 3.368-6.392-3.114-1.739-3.873-.658z" />
-                <path opacity=".44"
-                    d="M189.299 14.585c-1.789.843-4.738 4.465-3.062 6.369s5.6-1.313 6.095-3.873-1.838-3.058-3.033-2.496zM21.069 159.14c-1.547-1.232-6.098-2.279-7.069.064s3.652 4.435 6.16 3.76 1.939-3.001.909-3.824z" />
-            </g>
-            <g style="mix-blend-mode:multiply" opacity=".64">
-                <path
-                    d="M34.462 132.395c-2.752.517-2.309 2.978-1.427 5.208s3.987 2.866 6.177.828c-1.422-3.383-4.75-6.036-4.75-6.036z"
-                    fill="#99adf9" />
-            </g>
-            <g style="mix-blend-mode:multiply" opacity=".64">
-                <path
-                    d="M18.626 128.681c-1.971.219-3.578 3.072-2.188 5.386s4.038 3.999 5.554 3.368 1.769-4.041.675-6.229-2.146-2.737-4.041-2.525z"
-                    fill="#99adf9" />
-            </g>
-            <g style="mix-blend-mode:multiply" opacity=".64">
-                <path
-                    d="M174.21 35.872c-1.082.345-2.178 1.515-2.082 2.779s1.2 2.368 2.397 2.218 2.218-2.084 1.972-3.474-1.462-1.784-2.287-1.523z"
-                    fill="#99adf9" />
-            </g>
-            <g style="mix-blend-mode:multiply" opacity=".64">
-                <path d="M162.725 38.336s1.479 1.478 1.232 3.156-2.794 1.523-2.794 1.523.38-2.861 1.562-4.679z"
-                    fill="#99adf9" />
-            </g>
-        </svg>
-        <!-- /svg -->
-        <h4 class="title-lg"><span>Oops!</span> Page not Found</h4>
-        <p class="paragraph-text">The requested URL was not found on this server. The page you are looking for might
+<section class="main-section">    
+    <div>      
+        <h4 class=""><span>Oops!</span> Page not Found</h4>
+        <p class="">The requested URL was not found on this server. The page you are looking for might
             have been removed, had its name changed or it's temporarily unavailable.
         </p>
         <button mat-flat-button class="btn-lg" (click)="goBack()">
