--- a/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
+++ b/client/webUI/src/app/pages/error/page-not-found/page-not-found.component.html
@@ -26,7 +26,7 @@
     <!-- image-section -->
     <div class="col-4">
       <div>
-        <img src="assets/images/ballon-icon.png" />
+        <img src="assets/images/ballon-icon.png" class="w-100 h-100"/>
       </div>
     </div>
       <!-- /image-section -->
