--- a/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
+++ b/client/webUI/src/app/pages/auth/employee-code/employee-code.component.html
@@ -17,7 +17,7 @@
       <!-- title-section -->
       <div class="mb-4">
         <div class="banner-font position-relative fw-bold">
-          Welcome to Your <span class="text-primary">Rewards!</span>
+          Welcome, to Your <span class="text-primary">Rewards!</span>
       </div>
         <p>
           Enter your employee code and discover your exclusive rewards!
@@ -46,7 +46,7 @@
             class="button-mh-60 bg-primary shadow-sm w-50"
             [routerLink]="['/admin-login-access']"
             target="_blank"
-            >Admin Login</a
+            >Admin Panel</a
           >
         </div>
       </form>
